# memory_mcp

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ENTITY_RESOLUTION_GUIDE.md  GLINER_NER_IMPLEMENTATION_PLAN.md  GLINER_NER_SPEC.md  GRAPH_RELATION_COMPATIBILITY.md  INTENT_DRIVEN_MCP_DESIGN_GUIDE.md  LIFECYCLE_BACKGROUND_JOBS.md  MCP_APPS.md  MEMORY_SYSTEM_SPEC.md  REVIEW_ALIGNMENT_2026-03-25.md  SEMANTIC_RETRIEVAL_RANKING.md  SIMPLIFIED_SEARCH_REDESIGN_SPEC.md  SOTA_AI_Memory_2025_2026_vs_memory_mcp.md  SPEC.md  SURREALDB_MIGRATE_V2_V3_GUIDE.md  security-hardening-roadmap.md
docs/papers/: MemoriesDB_preprint_r1.txt
scripts/: convert_external_evals.py
src/: config.rs  correlation.rs  lib.rs  logging.rs  main.rs  mcp.rs  models.rs  service.rs  storage.rs  timing.rs
src/mcp/: error.rs  handlers.rs  mod.rs  params.rs  parsers.rs  resources.rs
src/migrations/: 002_datetime_types.surql  003_edge_indexes.surql  004_migration_checksums.surql  005_community_summary_search.surql  006_simplified_search_redesign.surql  007_episode_archival_fields.surql  008_fact_semantic_embeddings.surql  009_adaptive_memory_alignment.surql  010_coerce_t_ingested_to_datetime.surql  011_ingestion_draft.surql  012_app_sessions.surql  (+5 more)
tests/: apps_e2e.rs  embedded_context_cache.rs  embedded_fts_search.rs  embedded_invalidate.rs  embedded_resolve_alias.rs  embedded_support.rs  embedded_tasks.rs  eval_contracts.rs  eval_external_retrieval.rs  eval_extraction.rs  eval_latency.rs  eval_retrieval.rs  explain_provenance.rs  gliner_integration.rs  ingest_select.rs  lifecycle_archival.rs  lifecycle_decay.rs  longmem_acceptance.rs  migrations.rs  promise_detection.rs  service_acceptance.rs  service_integration.rs  storage_embedded.rs  tools_e2e.rs
(+58 files in other folders)
