[package]
name = "memory_mcp"
version = "0.1.0"
edition = "2024"
resolver = "3"
license = "MIT"

[dependencies]
rmcp = { version = "1.2.0", features = ["macros", "transport-io"] }
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "macros",
    "io-std"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
regex = "1.12.3"
sha2 = "0.10.9"
hex = "0.4.3"
serde_cbor = "0.11.2"
lru = "0.16.3"
surrealdb = { version = "3.0.4", features = ["kv-rocksdb", "kv-mem"] }

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.27.0"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
